--- a/config/final.yml
+++ b/config/final.yml
@@ -1,5 +1,5 @@
 ---
 blobstore:
-  provider: local
-  options:
-    blobstore_path: /tmp/blobstore
+    provider: s3
+    options:
+      bucket_name: v1-dummy-service-blobs
