--- a/templates/v1-dummy-broker.yml
+++ b/templates/v1-dummy-broker.yml
@@ -9,25 +9,23 @@ jobs:
   - name: v1-dummy-broker
     instances: 1
     release: v1-dummy-broker
-    resource_pool: (( merge ))
+    resource_pool: services-small
     template:
     - v1-dummy-broker
-    networks:
-    - name: services1
-      static_ips: (( static_ips(16) ))
+    networks: (( merge ))
     properties:
       networks:
-        broker_network: (( merge ))
+        broker_network: (( jobs.v1-dummy-broker.networks.[0].name ))
       env:
         service_unique_id: v1-dummy-broker-service
         plan_unique_id: v1-dummy-broker-plan
         pid_file: /var/vcap/sys/run/v1-dummy-broker/v1-dummy-broker.pid
-        nats_uri: (( merge ))
-        cloud_controller_uri: (( merge ))
-        uaa_endpoint: (( merge ))
+        uaa_endpoint: (( "https://uaa." .properties.domain ))
+        cloud_controller_uri: (( "https://api." .properties.domain ))
         uaa_client_id: cf
-        uaa_username: (( merge ))
-        uaa_password: (( merge ))
+        uaa_username: (( .properties.v1-dummy-broker.uaa_client_auth_credentials.username ))
+        uaa_password: (( .properties.v1-dummy-broker.uaa_client_auth_credentials.password ))
+        nats: (( .properties.nats ))
 
 update:
   canaries: 1
@@ -35,6 +33,11 @@ update:
   update_watch_time: 30000-60000
   max_in_flight: 4
   max_errors: 1
+
+properties:
+  domain: (( merge ))
+  nats: (( merge ))
+  v1-dummy-broker: (( merge ))
 
 networks: (( merge ))
 compilation: (( merge ))
