Create job for dummy service node

--- a/src/v1-dummy-broker/.env
+++ b/src/v1-dummy-broker/.env
@@ -8,4 +8,4 @@ UAA_ENDPOINT=http://uaa.10.244.0.34.xip.io
 UAA_USERNAME=admin
 UAA_PASSWORD=admin
 CLOUD_CONTROLLER_URI=http://api.10.244.0.34.xip.io
-LOCAL_DB=sqlite3:/tmp/node.db
+NODE_DB=sqlite3:/tmp/node.db
