Make service-auth-token configurable in the manifest
[Finishes #66689260]

--- a/templates/v1-dummy-broker.yml
+++ b/templates/v1-dummy-broker.yml
@@ -26,6 +26,7 @@ jobs:
         uaa_username: (( .properties.v1-dummy-broker.uaa_client_auth_credentials.username ))
         uaa_password: (( .properties.v1-dummy-broker.uaa_client_auth_credentials.password ))
         nats: (( .properties.nats ))
+        service_auth_token: 36001246-f5d0-4d9a-aa33-7d2522fe1ea7
   - name: v1-dummy-broker
     instances: 1
     release: v1-dummy-broker
@@ -46,7 +47,7 @@ jobs:
         uaa_username: (( .properties.v1-dummy-broker.uaa_client_auth_credentials.username ))
         uaa_password: (( .properties.v1-dummy-broker.uaa_client_auth_credentials.password ))
         nats: (( .properties.nats ))
-
+        service_auth_token: 36001246-f5d0-4d9a-aa33-7d2522fe1ea7
 update:
   canaries: 1
   canary_watch_time: 30000-60000
