Add acceptance tests
- Confirm that the v1-dummy-broker advertises its catalog successfully
- Confirm that it's possible to create an instance of the
  v1-dummy-broker service

[#66815270]

--- a/.gitignore
+++ b/.gitignore
@@ -9,11 +9,12 @@ blobs
 .DS_Store
 .final_builds/jobs/**/*.tgz
 .final_builds/packages/**/*.tgz
-*.swp
-*~
-*#
-#*
 src/v1-dummy-broker/config/config.yml
 bosh-lite/manifests
 bosh-lite/tmp
 src/v1-dummy-broker/tmp
+*.xml
+*.swp
+*~
+*#
+#*
