Implement bind and http endpoint to use bindings

--- a/src/v1-dummy-broker/.env
+++ b/src/v1-dummy-broker/.env
@@ -10,3 +10,4 @@ UAA_PASSWORD=admin
 CLOUD_CONTROLLER_URI=http://api.10.244.0.34.xip.io
 NODE_DB=sqlite3:/tmp/node.db
 SERVICE_AUTH_TOKEN=36001246-f5d0-4d9a-aa33-7d2522fe1ea7
+APP_DOMAIN=localhost
