--- a/src/v1-dummy-broker/Gemfile
+++ b/src/v1-dummy-broker/Gemfile
@@ -1,6 +1,7 @@
 source 'https://rubygems.org'
 
 gem 'vcap_services_base', '~> 0.2.9', :git => 'git://github.com/cloudfoundry/vcap-services-base.git', branch: 'master'
+gem 'eventmachine_httpserver'
 gem 'dotenv'
 
 group :test do
