--- a/templates/v1-dummy-broker.yml
+++ b/templates/v1-dummy-broker.yml
@@ -27,6 +27,7 @@ jobs:
         uaa_password: (( .properties.v1-dummy-broker.uaa_client_auth_credentials.password ))
         nats: (( .properties.nats ))
         service_auth_token: 36001246-f5d0-4d9a-aa33-7d2522fe1ea7
+        app_domain: (( .properties.domain ))
   - name: v1-dummy-broker
     instances: 1
     release: v1-dummy-broker
