--- a/src/v1-dummy-broker/Gemfile
+++ b/src/v1-dummy-broker/Gemfile
@@ -2,6 +2,7 @@ source 'https://rubygems.org'
 
 gem 'vcap_services_base', '~> 0.2.9', :git => 'git://github.com/cloudfoundry/vcap-services-base.git', branch: 'master'
 gem 'eventmachine_httpserver'
+gem 'cf-registrar', git: 'https://github.com/cloudfoundry/cf-registrar'
 gem 'dotenv'
 
 group :test do
