Implement unbind [finishes #66689908]

--- a/src/v1-dummy-broker/spec/assets/node_config.yml
+++ b/src/v1-dummy-broker/spec/assets/node_config.yml
@@ -7,6 +7,7 @@ local_db: sqlite3:/tmp/node.db
 node_id: v1-dummy-broker-node
 supported_versions: ['n/a']
 default_version: 'n/a'
+ip_route: localhost
 
 database_lock_file: /tmp/v1-dummy-broker/LOCK
 disabled_file: /tmp/v1-dummy-broker/DISABLED
