--- a/templates/v1-dummy-broker.yml
+++ b/templates/v1-dummy-broker.yml
@@ -10,8 +10,7 @@ jobs:
     instances: 1
     release: v1-dummy-broker
     resource_pool: services-small
-    template:
-    - v1-dummy-node
+    template: v1-dummy-node
     networks: (( merge ))
     properties:
       networks:
@@ -32,8 +31,7 @@ jobs:
     instances: 1
     release: v1-dummy-broker
     resource_pool: services-small
-    template:
-    - v1-dummy-broker
+    template: v1-dummy-broker
     networks: (( merge ))
     properties:
       networks:
