Make acceptance-tests and errand

--- a/bosh-lite/v1-dummy-broker-stub.yml
+++ b/bosh-lite/v1-dummy-broker-stub.yml
@@ -1,5 +1,12 @@
 director_uuid: PLACEHOLDER-DIRECTOR-UUID
 
+jobs:
+  - name: acceptance-tests
+    properties:
+      cf:
+        admin_username: admin
+        admin_password: admin
+        skip_ssl_validation: true
 properties:
   domain: 10.244.0.34.xip.io
 
