--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 acceptance_tests/integration_config.json
 acceptance_tests/setup_env.sh
+acceptance_tests/vendor/pkg
+acceptance_tests/vendor/bin
 config/dev.yml
 config/private.yml
 releases/*.tgz
