--- a/templates/cf-infrastructure-aws.yml
+++ b/templates/cf-infrastructure-aws.yml
@@ -20,7 +20,10 @@ jobs:
     networks:
     - name: v1-dummy-broker-network
       static_ips: (( static_ips(10) ))
-
+  - name: acceptance-tests
+    instances: 1
+    networks:
+    - name: v1-dummy-broker-network
 networks:
   - name: v1-dummy-broker-network
     type: manual
