--- a/config/blobs.yml
+++ b/config/blobs.yml
@@ -1,31 +1,33 @@
 ---
 ruby/bundler-1.3.5.gem:
   object_id: 78c06f80-c57f-4db5-9aa3-7349c77b28f2
-  sha: !binary |-
-    MmNhZDMwNTJhNTliODNmMWY2MTZlODIwMmY1YzcxNGU0NmJkODUyMw==
+  sha: 2cad3052a59b83f1f616e8202f5c714e46bd8523
   size: 268800
 ruby/ruby-2.0.0-p353.tar.gz:
   object_id: d5e5fcf4-29c8-4c77-99d2-7d602ad7cf84
-  sha: !binary |-
-    N2YyYzhiOGY1NjgyYWFiYzExMTRmNDRkMzZkMzE0YzZjMzdjMTFiOA==
+  sha: 7f2c8b8f5682aabc1114f44d36d314c6c37c11b8
   size: 13572794
 ruby/rubygems-2.1.11.tgz:
   object_id: ade085d0-8f66-42bc-a748-bc6e10132bcb
-  sha: !binary |-
-    Y2EzMDMzNDMyY2FlMjhkZWI3Y2VkNzljZGEyNzFjYjI5MmI3MGU1OQ==
+  sha: ca3033432cae28deb7ced79cda271cb292b70e59
   size: 367166
 ruby/yaml-0.1.5.tar.gz:
   object_id: 9e08d55b-a3eb-44a3-95f1-14f73e072363
-  sha: !binary |-
-    OGI3OGNiOWY3NTljN2Q4MGRiOGE3MzI4YzBlYmVjZmUzNGZkZTczNw==
+  sha: 8b78cb9f759c7d80db8a7328c0ebecfe34fde737
   size: 504897
 sqlite/sqlite-autoconf-3070500.tar.gz:
   object_id: d0c31f71-5afa-493f-8980-1e1654fd6e89
-  sha: !binary |-
-    NGUxMzM4NDk3YjhkYTUwYjg0MzA3MTkxYmIzNDE4ZTllYzU3MTVkNw==
+  sha: 4e1338497b8da50b84307191bb3418e9ec5715d7
   size: 1551070
 ruby/ruby-2.0.0-p481.tar.gz:
   object_id: bbe260c4-86d9-413f-a686-5569faaebbd7
-  sha: !binary |-
-    ZGRlZDdiNzM0OWQ1OWZlYjgzZDRmNzc0YjJkZGVjMjNlZWFiNzk3OA==
+  sha: dded7b7349d59feb83d4f774b2ddec23eeab7978
   size: 13586757
+cli/cf-linux-amd64.tgz:
+  object_id: 2d8c7fe1-4a49-46c7-be6f-25cafc93a66b
+  sha: 2da718e8e33105ff5884f1e834b79650ab330803
+  size: 3886903
+golang/go1.2.1.linux-amd64.tar.gz:
+  object_id: 95b91fae-e7ee-4267-a77a-74a9ef61fb73
+  sha: 7605f577ff6ac2d608a3a4e829b255ae2ebc8dcf
+  size: 56123695
