Use apps domain instead of regular domain for pushing apps
[#80238298]

--- a/templates/v1-dummy-broker.yml
+++ b/templates/v1-dummy-broker.yml
@@ -26,7 +26,7 @@ jobs:
         uaa_password: (( .properties.v1-dummy-broker.uaa_client_auth_credentials.password ))
         nats: (( .properties.nats ))
         service_auth_token: 36001246-f5d0-4d9a-aa33-7d2522fe1ea7
-        app_domain: (( .properties.domain ))
+        app_domain: (( .properties.apps_domain ))
   - name: v1-dummy-broker
     instances: 1
     release: v1-dummy-broker
@@ -59,7 +59,7 @@ jobs:
         api_url: (( "https://api." .properties.domain ))
         admin_username: (( merge ))
         admin_password: (( merge ))
-        apps_domain: (( .properties.domain ))
+        apps_domain: (( .properties.apps_domain ))
         skip_ssl_validation: (( merge || false ))
 
 update:
@@ -79,6 +79,7 @@ properties:
   domain: (( merge ))
   nats: (( merge ))
   v1-dummy-broker: (( merge ))
+  apps_domain: (( merge ))
 
 resource_pools:
   - name: services-small
