--- a/templates/cf-infrastructure-aws.yml
+++ b/templates/cf-infrastructure-aws.yml
@@ -1,7 +1,7 @@
 meta:
   stemcell:
-    name: bosh-aws-xen-ubuntu-lucid-go_agent
-    version: (( merge || 2578 ))
+    name: bosh-aws-xen-ubuntu-trusty-go_agent
+    version: 2719.3
 
 compilation:
   network: v1-dummy-broker-network
