Add back address field to v1-dummy-broker template
Computes from .properties.nats.machine.[0]

--- a/templates/v1-dummy-broker.yml
+++ b/templates/v1-dummy-broker.yml
@@ -80,6 +80,7 @@ properties:
   nats:
     port: (( merge ))
     machines: (( merge ))
+    address: (( machines.[0] ))
     user: (( merge ))
     password: (( merge ))
   v1-dummy-broker: (( merge ))
