Fix templates to run on bosh-lite
- updated NATS format
- use http_scheme so that v1-dummy-broker can run http without ssl on bosh-lite

--- a/bosh-lite/v1-dummy-broker-stub.yml
+++ b/bosh-lite/v1-dummy-broker-stub.yml
@@ -15,7 +15,8 @@ properties:
   nats:
     user: nats
     password: nats
-    address: 10.244.0.6
+    machines:
+    - 10.244.0.6
     port: 4222
 
   v1-dummy-broker:
